[package]
name = "pest_consume"
version = "1.1.3"
authors = ["Nadrieril <nadrieril@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "A framework for processing the output of a pest-generated parser"
readme = "../README.md"
repository = "https://github.com/Nadrieril/pest_consume"
keywords = ["pest", "parser", "peg", "grammar"]
categories = ["parsing"]

[dependencies]
pest = "2.2"
pest_derive = "2.2"
pest_consume_macros = { version = "1.1.0", path = "../pest_consume_macros" }

[dev-dependencies]
lazy_static = "1.4.0"
