[package]
name = "pest_consume_macros"
version = "1.1.0"
authors = ["Nadrieril <nadrieril@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Macros for pest_consume"
readme = "../README.md"
repository = "https://github.com/Nadrieril/pest_consume"
keywords = ["pest", "parser", "peg", "grammar", "proc_macro"]
categories = ["parsing"]

[lib]
proc-macro = true
doctest = false

[dependencies]
quote = "1.0.2"
proc-macro2 = "1.0.2"
syn = { version = "1.0.5", features = ["full"] }
